Implement portrait mode and fix some bugs

--- a/FlashPad--iOS--Info.plist
+++ b/FlashPad--iOS--Info.plist
@@ -45,5 +45,10 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<false/>
+	</dict>
 </dict>
 </plist>
